Fix issue on small height screen

--- a/style.css
+++ b/style.css
@@ -138,7 +138,7 @@ body,html{
 	overflow-y: scroll;
 }
 .headers{
-	padding: 100px 40px 30px 30px ;
+	padding: 20px 40px 30px 30px ;
 }
 .section-right h3{
 	font-weight: 700;
